# software-analysis-examples

./: .flake8  .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
software_analysis_examples/: ast_example.py  controldependencies.py  dummy.py  mocking.py
tests/: conftest.py  test_mocking.py
tests/controldependencies/: test_cfg.py  test_controldependencegraph.py  test_dominatortree.py  test_programgraph.py
tests/fixtures/: __init__.py
tests/fixtures/programgraph/: samples.py  slides.py  whileloop.py
