[tool.poetry]
name = "examples"
version = "0.1.0"
description = ""
authors = ["Stephan Lukasczyk <stephan.lukasczyk@uni-passau.de>"]
license = "LGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.7"
astor = "^0.8.1"
bytecode = "^0.12.0"

[tool.poetry.dev-dependencies]
pytest-cov = "^2.11.1"
pytest = "^6.2.4"
black = "^21.5b1"
flake8 = "^3.9.2"
isort = "^5.8.0"
bandit = "^1.7.0"
safety = "^1.10.3"

[tool.black]
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''

(
  /(
      \.eggs          # exclude a few common directories in the
    | \.git           # root of the project
    | \.pytest_cache
    | \.mypy_cache
    | \.venv
    | _build
    | build
    | dist
    | pynguin.egg-info
  )/
)
'''

[tool.coverage.run]
branch = true
source = ["pynguin", "tests"]
omit = ["tests/fixtures/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "def __str__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.coverage.html]
directory = "cov_html"

[tool.isort]
line_length=88
multi_line_output=3
include_trailing_comma=true
indent='    '


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
